--- a/TestSelector.cabal
+++ b/TestSelector.cabal
@@ -4,7 +4,6 @@ cabal-version: >=1.2
 build-type: Simple
 license: AllRightsReserved
 license-file: ""
-description:  
 data-dir: ""
  
 executable TestSelector
@@ -16,7 +15,8 @@ executable TestSelector
     extensions: ScopedTypeVariables BangPatterns TypeSynonymInstances
                 PatternGuards GeneralizedNewtypeDeriving
     hs-source-dirs: src
-    other-modules: Structuring Gradeable DynamicSolving Clusterization
+    other-modules: Selection Structuring Gradeable DynamicSolving
+                   Clusterization
  
 test-suite test-TestSelector
     build-depends: HTF >=0.11.3.0, HUnit >=1.2.5.2,
