--- a/cpp/production/libs/PugiXML/CMakeLists.txt
+++ b/cpp/production/libs/PugiXML/CMakeLists.txt
@@ -4,6 +4,7 @@ CMAKE_POLICY(VERSION 2.8.1)
 PROJECT(PugiXML)
 
 SET(PUGIXML_DIR ${LIBRARIES_BASE_DIR}/PugiXML)
+SET(PUGIXML_INCLUDE_DIR ${LIBRARIES_BASE_DIR}/PugiXML PARENT_SCOPE)
 
 FILE (GLOB SOURCES ${PUGIXML_DIR}/*.cpp)
 FILE (GLOB HEADERS ${PUGIXML_DIR}/*.hpp)
