--- a/cpp/tests/CMakeLists.txt
+++ b/cpp/tests/CMakeLists.txt
@@ -6,13 +6,15 @@ PROJECT(Tester)
 SET(TEST_DIR ${ROOT_DIR}/tests)
 SET(TEST_FRAMEWORK_INCLUDE_DIRS ${TEST_DIR}/doubles/*.h ${TEST_DIR}/helpers/*.h)
 
+MESSAGE("Test code directory: " ${TEST_DIR})
+
 FILE (GLOB HEADERS ${TEST_DIR}/*/*.hpp)
 FILE (GLOB SOURCES ${TEST_DIR}/testcases/*.cpp ${TEST_DIR}/helpers/*.cpp ${TEST_DIR}/doubles/*.cpp)
 
-
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${PUGIXML_INCLUDE_DIR})
-INCLUDE_DIRECTORIES(${PRODUCTION_INCLUDE_DIR}})
+INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${PRODUCTION_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${TEST_FRAMEWORK_INCLUDE_DIRS})
 
 IF(NOT DEFINED TURTLE_ROOT)
@@ -31,11 +33,4 @@ INCLUDE_DIRECTORIES(${TURTLE_ROOT})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 
 ADD_EXECUTABLE(Tester ${SOURCES})
-TARGET_LINK_LIBRARIES(Tester TestSelector PugiXML ${Boost_Libraries})
-
-if ( MSVC )
-    ADD_CUSTOM_COMMAND(TARGET Tester
-        POST_BUILD
-        COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/Tester${CMAKE_EXECUTABLE_SUFFIX} ARGS "--report-level=short"
-        COMMENT "=== Running tests ===")
-endif ( MSVC )
+TARGET_LINK_LIBRARIES(Tester TestSelector PugiXML Lua ${Boost_Libraries})
