--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -17,10 +17,17 @@ SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/exe)
 SET(Boost_USE_STATIC_LIBS ON)
 FIND_PACKAGE(Boost 1.55.0 REQUIRED COMPONENTS filesystem unit_test_framework)
 
-ADD_SUBDIRECTORY(executor)
 ADD_SUBDIRECTORY(production)
-ADD_SUBDIRECTORY(tests)
 
+IF (${PRODUCTION_INCLUDE_DIR} EQUAL "")
+    MESSAGE(FATAL_ERROR "PRODUCTION_INCLUDE_DIR shall be set by cmake files in production code")
+ENDIF(${PRODUCTION_INCLUDE_DIR} EQUAL "")
+
+ADD_SUBDIRECTORY(tests)
+ADD_SUBDIRECTORY(executor)
+
+MESSAGE(${PRODUCTION_INCLUDE_DIR})
 ADD_DEPENDENCIES(Executor TestSelector)
 ADD_DEPENDENCIES(Tester TestSelector)
 ADD_DEPENDENCIES(TestSelector PugiXML)
+ADD_DEPENDENCIES(TestSelector Lua)
