--- a/cpp/production/CMakeLists.txt
+++ b/cpp/production/CMakeLists.txt
@@ -14,7 +14,9 @@ SET(PUGIXML_INCLUDE_DIR ${PUGIXML_INCLUDE_DIR} PARENT_SCOPE)
 SET(LUA_INCLUDE_DIR ${LUA_INCLUDE_DIR} PARENT_SCOPE)
 
 FILE (GLOB HEADERS ${PRODUCTION_INCLUDE_DIR}/*.h)
-FILE (GLOB SOURCES ${PRODUCTION_DIR}/src/*.cpp)
+
+FILE (GLOB SOURCES ${PRODUCTION_DIR}/src/*.cpp
+    ${PRODUCTION_DIR}/src/*/*.cpp)
 
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${PRODUCTION_INCLUDE_DIR})
