Adjusting code & project to GCC & CLANG requirements

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -14,8 +14,16 @@ SET( TS_INSTALL_DOC_DIR doc/ )
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR}/lib)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/exe)
 
+MESSAGE("C++ compiler in use: ${CMAKE_CXX_COMPILER}")
+MESSAGE("C compiler in use: ${CMAKE_CC_COMPILER}")
+
+IF (CMAKE_CXX_COMPILER_ID EQUAL "Clang" OR CMAKE_CXX_COMPILER_ID EQUAL "GNU")
+    SET(CMAKE_CXX_FLAGS "-std=c++1y")
+ENDIF(CMAKE_CXX_COMPILER_ID EQUAL "Clang" OR CMAKE_CXX_COMPILER_ID EQUAL "GNU")
+
 SET(Boost_USE_STATIC_LIBS ON)
-FIND_PACKAGE(Boost 1.55.0 REQUIRED COMPONENTS filesystem unit_test_framework)
+SET(Boost_USE_MULTITHREADED ON)
+FIND_PACKAGE(Boost 1.55.0 REQUIRED COMPONENTS filesystem unit_test_framework thread system)
 
 ADD_SUBDIRECTORY(production)
 
