--- a/cpp/executor/CMakeLists.txt
+++ b/cpp/executor/CMakeLists.txt
@@ -17,4 +17,4 @@ INCLUDE_DIRECTORIES(${EXECUTOR_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 
 ADD_EXECUTABLE(Executor ${SOURCES})
-TARGET_LINK_LIBRARIES(Executor TestSelector ${Boost_Libraries})
+TARGET_LINK_LIBRARIES(Executor TestSelector PugiXML Lua ${Boost_LIBRARIES})
