--- a/cpp/tests/CMakeLists.txt
+++ b/cpp/tests/CMakeLists.txt
@@ -31,6 +31,5 @@ MESSAGE("Found Turtle Mock in: " ${TURTLE_ROOT})
 INCLUDE_DIRECTORIES(${TURTLE_ROOT})
 
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
-
 ADD_EXECUTABLE(Tester ${SOURCES})
-TARGET_LINK_LIBRARIES(Tester TestSelector PugiXML Lua ${Boost_Libraries})
+TARGET_LINK_LIBRARIES(Tester TestSelector PugiXML Lua ${Boost_LIBRARIES})
