Added linking to libc++ for Clang compiler, as it doesn't work well with libstdc++ from gcc4.9

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -14,12 +14,12 @@ SET( TS_INSTALL_DOC_DIR doc/ )
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR}/lib)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/exe)
 
-MESSAGE("C++ compiler in use: ${CMAKE_CXX_COMPILER}")
-MESSAGE("C compiler in use: ${CMAKE_CC_COMPILER}")
-
-IF (CMAKE_CXX_COMPILER_ID EQUAL "Clang" OR CMAKE_CXX_COMPILER_ID EQUAL "GNU")
+MESSAGE("COMPILER:${CMAKE_CXX_COMPILER_ID}")
+IF (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     SET(CMAKE_CXX_FLAGS "-std=c++1y")
-ENDIF(CMAKE_CXX_COMPILER_ID EQUAL "Clang" OR CMAKE_CXX_COMPILER_ID EQUAL "GNU")
+ELSEIF(CMAKE_CXX_COMPILER_ID STREQUAL "Clang") 
+    SET(CMAKE_CXX_FLAGS "-std=c++1y -stdlib=libc++")
+ENDIF(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
 
 SET(Boost_USE_STATIC_LIBS ON)
 SET(Boost_USE_MULTITHREADED ON)
@@ -27,9 +27,9 @@ FIND_PACKAGE(Boost 1.55.0 REQUIRED COMPONENTS filesystem unit_test_framework thr
 
 ADD_SUBDIRECTORY(production)
 
-IF (${PRODUCTION_INCLUDE_DIR} EQUAL "")
+IF (${PRODUCTION_INCLUDE_DIR} STREQUAL "")
     MESSAGE(FATAL_ERROR "PRODUCTION_INCLUDE_DIR shall be set by cmake files in production code")
-ENDIF(${PRODUCTION_INCLUDE_DIR} EQUAL "")
+ENDIF(${PRODUCTION_INCLUDE_DIR} STREQUAL "")
 
 ADD_SUBDIRECTORY(tests)
 ADD_SUBDIRECTORY(executor)
