--- a/cpp/production/CMakeLists.txt
+++ b/cpp/production/CMakeLists.txt
@@ -8,7 +8,7 @@ SET(PRODUCTION_INCLUDE_DIR ${PRODUCTION_DIR}/include)
 SET(PRODUCTION_INCLUDE_DIR ${PRODUCTION_DIR}/include PARENT_SCOPE)
 
 ADD_SUBDIRECTORY(libs)
-MESSAGE("Production code directory: " ${PRODUCTION_DIR})
+MESSAGE("-- Production code directory: " ${PRODUCTION_DIR})
 
 SET(PUGIXML_INCLUDE_DIR ${PUGIXML_INCLUDE_DIR} PARENT_SCOPE)
 SET(LUA_INCLUDE_DIR ${LUA_INCLUDE_DIR} PARENT_SCOPE)
