Modified some cmakes, removed compilation warnings and added example computer shop data

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -11,10 +11,10 @@ SET( TS_INSTALL_CONTRIB_DIR contrib/ )
 SET( TS_INSTALL_EXAMPLE_DIR examples/ )
 SET( TS_INSTALL_DOC_DIR doc/ )
 
-
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR}/lib)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/exe)
 
+SET_WARNING_LEVEL()
 IF (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     FIND_PACKAGE(Threads REQUIRED)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -pthread -g")
@@ -25,6 +25,10 @@ IF (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clan
         SET_CLANG_BOOST_COMPILER_FLAGS() #because FindBoost sucks at finding boost compiled with versioned layout by Clang
     ENDIF(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
 ENDIF(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+
+IF (MSVC)
+    ENABLE_MULTIPROCESSOR_BUILD()
+ENDIF (MSVC)
 
 MESSAGE("-- Using C++ compiler: ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}")
 
