Added working cfunction. Can call functions with various number of arguments and stuff. Lambdas are not yet supported

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -17,7 +17,7 @@ SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/exe)
 SET_WARNING_LEVEL()
 IF (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     FIND_PACKAGE(Threads REQUIRED)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -pthread -g")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -pthread")
     ADD_SANITIZERS_TO_BUILD()
 
     IF(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
