Added support for multithreaded mocks by default. A lot less warnings now

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -14,6 +14,7 @@ SET( TS_INSTALL_DOC_DIR doc/ )
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR}/lib)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/exe)
 
+SET_THREADSAFE_MOCKS()
 SET_WARNING_LEVEL()
 IF (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     FIND_PACKAGE(Threads REQUIRED)
